--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         </div>
 
         <!-- ---------------------------project-3--------------------- -->
-        <div class="col-lg-4 project p-0 shadow-lg mb-5" style="width: 370px; margin: auto;">
+        <a class="col-lg-4 project p-0 shadow-lg mb-5" style="width: 370px; margin: auto;text-decoration:none;">
           <div class="project-top overflow-hidden" style="height: 180px;">
             <img src="images/projects/newsletter.jpg" class="project-img" width="100%" height="100%" >
           </div>
@@ -86,7 +86,7 @@
             <h5 class="project-title p2">NewsLetter</h5>
             <p class="p3">HTML, CSS, JavaScript power a sleek Netflix clone</p>
           </div>
-        </div>
+        </a>
 
         <!-- ---------------------------project-4--------------------- -->
         <div class="col-lg-4 project p-0 shadow-lg mb-5" style="width: 370px; margin: auto;">
